 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.6rc1

 - [ZBXNEXT-799] added support of SRV records to net.tcp.dns.query[]; thanks to Edward Rudd (asaveljevs)
 - [ZBX-1029] added lookup of Jabber SRV records to Jabber notifications; thanks to Edward Rudd (asaveljevs)
 - [ZBXNEXT-792] added type parameter for system.hostname[] on Windows to support both NetBIOS and host names (rudolfs)
 - [ZBXNEXT-791] added HostnameItem to Agent and Proxy configuration for setting the default Hostname (rudolfs)
 - [ZBX-3192] fixed snmp index cache to support snmp target for each entry; thanks to Ilia Sotnikov (dimir)
 - [ZBX-3825] fixed errors with single quotes in javascript messages (KB)
 - [ZBXNEXT-782] added support of not-supported items in the history cache (Sasha)
 - [ZBX-3072] fixed mysql error when shutting down server (dimir)
 - [ZBX-3105] added processing of garbage in configuration files (dimir)
 - [ZBX-2083] fixed audit.details field cutting (Vedmak)
 - [ZBX-3824] fixed unnecessary synchronization of "profiles" table in DM setup (asaveljevs)
 - [ZBX-3821] removed warning messages about failed evaluation of trigger expressions (asaveljevs)
 - [ZBX-3826] fixed recovering unsupported icmpping* items when a key has been entered incorrectly (Sasha)
 - [ZBX-3766] fixed "Do" button in item form (KB)
 - [ZBX-3417] removed trailing and leading space from phrase " - all groups - " (Alexei)
 - [ZBX-3806] fixed HTTP pollers being started on Zabbix proxy (asaveljevs)
 - [ZBX-3808] updated Brazilian Portuguese translation; thanks to Murilo Moreira de Oliveira (Alexei)